Fix transaction overflows div height

--- a/app/style/SendPage.less
+++ b/app/style/SendPage.less
@@ -316,6 +316,7 @@
   margin-top: 100px;
   padding: 20px;
   border-radius: 10px;
+  display: table;
 }
 
 .unsigned-raw-tx {
